--- a/pomodoro.html
+++ b/pomodoro.html
@@ -10,8 +10,10 @@
 
 <body>
 
-
-    <p id="timerID">25 : 00</p>
+    <div class="timer-Container">
+        <p id="timerID" class="timer">25 : 00</p>
+    </div>
+    
 
     <script>
         const tempsTravaille = 25;
