ajour des @media pour le format tablette

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-    <div class="container">
+    
 
+    <div class="container">
+        <header>
+            <h1 class="title">POMODORO</h1>
+        </header>
         <!-- Inputs pour sélectionner les temps de travail et de repos -->
         <button id="settingsButton" aria-label="Paramètres">
             <i class="fas fa-cog"></i>
@@ -38,8 +42,6 @@
         <!-- Bouton pour démarrer le timer -->
         <button id="startButton" class="start-button">&#9654;</button>
 
-        <!-- Bouton pour mettre en pause et relancer le timer avec des icônes -->
-        <!-- <span id="pauseButton" class="pause-button">&#9208;</span> -->
     </div>
 </body>
 
